# tgsprint

./: README.md  demo.py  pyproject.toml  requirements.txt
src/: demo.py
src/tgsprint/: button.py  menu.py  tgsprint.py  utils.py
tgsprint/: button.py  menu.py  state.py  tgsprint.py  utils.py
