[build-system]
requires = [
    "setuptools>=61.0",
    "python-telegram-bot==13.12",
    "emoji",
    "attrs"
]
build-backend = "setuptools.build_meta"

[project]
name = "tgsprint"
version = "0.1.1"
description = "Setup telegram menu bot in lightning speed!"
requires-python = ">=3.7"
readme = "README.md"
