[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "tgsprint"
version = "0.1.2"
description = "Setup telegram menu bot in lightning speed!"
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "python-telegram-bot==13.12",
    "emoji",
    "attrs"
]
keywords = ["telegram"]